Small manual updates

--- a/manual/chronojump_manual_es.lyx
+++ b/manual/chronojump_manual_es.lyx
@@ -31,10 +31,19 @@
 \output_sync 0
 \bibtex_command default
 \index_command default
-\float_placement p
+\float_placement ph
 \paperfontsize default
 \spacing single
-\use_hyperref false
+\use_hyperref true
+\pdf_bookmarks true
+\pdf_bookmarksnumbered false
+\pdf_bookmarksopen false
+\pdf_bookmarksopenlevel 1
+\pdf_breaklinks false
+\pdf_pdfborder true
+\pdf_colorlinks false
+\pdf_backref false
+\pdf_pdfusetitle true
 \papersize default
 \use_geometry false
 \use_amsmath 1
@@ -47,6 +56,7 @@
 \paperorientation portrait
 \suppress_date false
 \use_refstyle 0
+\boxbgcolor #ffffff
 \index Índice
 \shortcut idx
 \color #008000
